--- a/Cloudents.Web/bundleconfig.json
+++ b/Cloudents.Web/bundleconfig.json
@@ -4,5 +4,11 @@
     "inputFiles": [
       "ClientApp/api/search.js"
     ]
+  },
+  {
+    "outputFileName": "ClientApp/main.min.js",
+    "inputFiles": [
+      "ClientApp/main.js"
+    ]
   }
 ]
