--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -25,9 +25,10 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "vue-infinite-loading": "^2.2.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "vuetify": "^0.15.7",
+    "vuetify": "^0.16.3",
     "url-loader": "^0.5.9",
     "file-loader": "^1.1.4",
-    "vuex-persistedstate": "^2.0.0"
+    "vuex-persistedstate": "^2.0.0",
+    "babel-plugin-transform-imports": "^1.4.1"
   }
 }
