--- a/Cloudents.Infrastructure/packages.config
+++ b/Cloudents.Infrastructure/packages.config
@@ -1,15 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.6.1" targetFramework="net47" />
+  <package id="Autofac.Extras.DynamicProxy" version="4.2.1" targetFramework="net47" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net47" />
   <package id="CacheManager.Core" version="1.1.1" targetFramework="net47" />
+  <package id="CacheManager.Serialization.Json" version="1.1.1" targetFramework="net47" />
   <package id="CacheManager.StackExchange.Redis" version="1.1.1" targetFramework="net47" />
+  <package id="CacheManager.SystemRuntimeCaching" version="1.1.1" targetFramework="net47" />
+  <package id="Castle.Core" version="4.0.0" targetFramework="net47" />
   <package id="Dapper" version="1.50.2" targetFramework="net47" />
-  <package id="Google.Apis" version="1.29.1" targetFramework="net47" />
-  <package id="Google.Apis.Auth" version="1.29.1" targetFramework="net47" />
-  <package id="Google.Apis.Core" version="1.29.1" targetFramework="net47" />
-  <package id="Google.Apis.Customsearch.v1" version="1.29.1.896" targetFramework="net47" />
-  <package id="Google.Apis.YouTube.v3" version="1.29.1.991" targetFramework="net47" />
+  <package id="Google.Apis" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Auth" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Core" version="1.29.2" targetFramework="net47" />
+  <package id="Google.Apis.Customsearch.v1" version="1.29.2.896" targetFramework="net47" />
+  <package id="Google.Apis.YouTube.v3" version="1.29.2.991" targetFramework="net47" />
   <package id="Microsoft.Azure.Search" version="4.0.1-preview" targetFramework="net47" />
   <package id="Microsoft.Cognitive.LUIS" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.9" targetFramework="net47" />
