--- a/Cloudents.Web/appsettings.json
+++ b/Cloudents.Web/appsettings.json
@@ -8,5 +8,6 @@
   "AzureSearch": {
     "SearchServiceName": "cloudents",
     "SearchServiceAdminApiKey": "5B0433BFBBE625C9D60F7330CFF103F0"
-  }
+  },
+  "Redis":  "zboxcache.redis.cache.windows.net,abortConnect=false,allowAdmin=true,ssl=true,password=CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI="
 }
