--- a/Zbang.Cloudents.Jared/Web.config
+++ b/Zbang.Cloudents.Jared/Web.config
@@ -23,6 +23,7 @@
     
     <add key="documentDbProduction" value="true" />
     <add key="CacheUse" value="true" />
+    <add key="Redis" value="zboxcache.redis.cache.windows.net,abortConnect=false,allowAdmin=true,ssl=true,password=CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI=" />
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
     <add key="AzureSearchServiceName" value="cloudents" />
     <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://cloudentsmsg-ns.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=oePM1T/GBe2ZlaDhik3MLHNXstsM4lhnCTyRTBi0bmQ=" />
@@ -165,7 +166,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Google.Apis.Core" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.19.0.0" newVersion="1.19.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.29.2.0" newVersion="1.29.2.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Apis" publicKeyToken="4b01fa6e34db77ab" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.29.2.0" newVersion="1.29.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
