--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -59,20 +59,24 @@
     <Compile Include="Extension\UriBuilderExtension.cs" />
     <Compile Include="Interfaces\IAI.cs" />
     <Compile Include="Interfaces\IBookSearch.cs" />
+    <Compile Include="Interfaces\ICacheProvider.cs" />
     <Compile Include="Interfaces\IDocumentSearch.cs" />
     <Compile Include="Interfaces\IFlashcardSearch.cs" />
     <Compile Include="Interfaces\IJobSearch.cs" />
     <Compile Include="Interfaces\IKeyGenerator.cs" />
-    <Compile Include="Interfaces\IPurchaseSearch.cs" />
+    <Compile Include="Interfaces\IPlacesSearch.cs" />
     <Compile Include="Interfaces\IQuestionSearch.cs" />
     <Compile Include="Interfaces\IReadRepository.cs" />
     <Compile Include="Interfaces\IReadRepositorySingle.cs" />
     <Compile Include="Interfaces\ITitleSearch.cs" />
     <Compile Include="Interfaces\ITutorSearch.cs" />
     <Compile Include="Interfaces\IVideoSearch.cs" />
+    <Compile Include="Models\CacheRegion.cs" />
     <Compile Include="Models\GeoPoint.cs" />
     <Compile Include="Models\GeoPointConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Request\AiQuery.cs" />
+    <Compile Include="Request\IQuery.cs" />
     <Compile Include="Request\SearchQuery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
