--- a/Test/App.config
+++ b/Test/App.config
@@ -10,6 +10,7 @@
   <appSettings>
     <add key="AzureSearchKey" value="5B0433BFBBE625C9D60F7330CFF103F0" />
     <add key="AzureSearchServiceName" value="cloudents" />
+    <add key="Redis" value="zboxcache.redis.cache.windows.net,abortConnect=false,allowAdmin=true,ssl=true,password=CxHKyXDx40vIS5EEYT0UfnVIR1OJQSPrNnXFFdi3UGI="/>
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
