--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -75,9 +75,8 @@
     <Compile Include="Models\GeoPoint.cs" />
     <Compile Include="Models\GeoPointConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Request\AiQuery.cs" />
-    <Compile Include="Request\IQuery.cs" />
     <Compile Include="Request\SearchQuery.cs" />
+    <Compile Include="TimeConst.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
