--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -29,6 +29,7 @@
     "url-loader": "^0.5.9",
     "file-loader": "^1.1.4",
     "vuex-persistedstate": "^2.0.0",
-    "babel-plugin-transform-imports": "^1.4.1"
+    "babel-plugin-transform-imports": "^1.4.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0"
   }
 }
