complete food fetching data

--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -13,19 +13,14 @@
     <Content Include="ClientApp\components\general\images\document.svg" />
     <Content Include="ClientApp\components\general\images\flashcard.svg" />
     <Content Include="ClientApp\components\general\images\job.svg" />
-    <Content Include="ClientApp\components\general\images\purchase.svg" />
     <Content Include="ClientApp\components\general\images\tutor.svg" />
     <Content Include="ClientApp\components\header\images\ask.svg" />
     <Content Include="ClientApp\components\header\images\book.svg" />
     <Content Include="ClientApp\components\header\images\document.svg" />
     <Content Include="ClientApp\components\header\images\flashcard.svg" />
     <Content Include="ClientApp\components\header\images\job.svg" />
-    <Content Include="ClientApp\components\header\images\purchase.svg" />
+    <Content Include="ClientApp\components\header\images\food.svg" />
     <Content Include="ClientApp\components\header\images\tutor.svg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="ClientApp\components\general\images\" />
   </ItemGroup>
 
   <ItemGroup>
