a la carte complete
case 8756

--- a/Cloudents.Web/.babelrc
+++ b/Cloudents.Web/.babelrc
@@ -1,8 +1,12 @@
 ﻿{
   "presets": ["env"],
-  "plugins": ["syntax-dynamic-import","transform-object-rest-spread",["transform-imports", {
-  "vuetify": {
-    "transform": "vuetify/es5/components/${member}"
-  }
+  "plugins": [
+  "syntax-dynamic-import",
+  "transform-object-rest-spread",
+	["transform-imports", {
+		  "vuetify": {
+			"transform": "vuetify/es5/components/${member}",
+			"preventFullImport": true
+		  }
 }]]
 }
