--- a/Cloudents.Web/Cloudents.Web.csproj
+++ b/Cloudents.Web/Cloudents.Web.csproj
@@ -14,13 +14,6 @@
     <Content Include="ClientApp\components\general\images\flashcard.svg" />
     <Content Include="ClientApp\components\general\images\job.svg" />
     <Content Include="ClientApp\components\general\images\tutor.svg" />
-    <Content Include="ClientApp\components\header\images\ask.svg" />
-    <Content Include="ClientApp\components\header\images\book.svg" />
-    <Content Include="ClientApp\components\header\images\document.svg" />
-    <Content Include="ClientApp\components\header\images\flashcard.svg" />
-    <Content Include="ClientApp\components\header\images\job.svg" />
-    <Content Include="ClientApp\components\header\images\food.svg" />
-    <Content Include="ClientApp\components\header\images\tutor.svg" />
   </ItemGroup>
 
   <ItemGroup>
@@ -52,6 +45,10 @@
 
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ClientApp\components\pages\Images\" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
