--- a/Cloudents.Core/Cloudents.Core.csproj
+++ b/Cloudents.Core/Cloudents.Core.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DTOs\BookSearchDto.cs" />
     <Compile Include="DTOs\JobDto.cs" />
+    <Compile Include="DTOs\JobFacetDto.cs" />
     <Compile Include="DTOs\PlaceDto.cs" />
     <Compile Include="DTOs\TutorDto.cs" />
     <Compile Include="DTOs\UniversitySynonymDto.cs" />
