--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^2.7.0",
     "vue-template-compiler": "^2.4.2",
     "vuex": "^3.0.0",
+    "vue-avatar-component": "^1.2.4",
     "css-loader": "^0.28.7",
     "style-loader": "^0.18.2",
     "extract-text-webpack-plugin": "^3.0.0",
