--- a/Zbang.Cloudents.Jared/ApplicationInsights.config
+++ b/Zbang.Cloudents.Jared/ApplicationInsights.config
@@ -20,6 +20,7 @@
     <Add Type="Microsoft.ApplicationInsights.Web.AuthenticatedUserIdTelemetryInitializer, Microsoft.AI.Web"/>
     <Add Type="Microsoft.ApplicationInsights.Web.AccountIdTelemetryInitializer, Microsoft.AI.Web"/>
     <Add Type="Microsoft.ApplicationInsights.Web.SessionTelemetryInitializer, Microsoft.AI.Web"/>
+    <Add Type=" Zbang.Cloudents.Jared.RequestBodyInitializer,  Zbang.Cloudents.Jared"/>
   </TelemetryInitializers>
   <TelemetryModules>
     <Add Type="Microsoft.ApplicationInsights.DependencyCollector.DependencyTrackingTelemetryModule, Microsoft.AI.DependencyCollector">
