--- a/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
+++ b/Cloudents.Infrastructure/Cloudents.Infrastructure.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Search\DocumentSearch.cs" />
     <Compile Include="Search\Entities\Job.cs" />
     <Compile Include="Search\Entities\Tutor.cs" />
+    <Compile Include="Search\Entities\University.cs" />
     <Compile Include="Search\FlashcardSearch.cs" />
     <Compile Include="Search\ITutorProvider.cs" />
     <Compile Include="Search\JobSearch.cs" />
@@ -159,6 +160,7 @@
     <Compile Include="Search\TutorMeSearch.cs" />
     <Compile Include="Search\TutorAzureSearch.cs" />
     <Compile Include="Search\TutorSearch.cs" />
+    <Compile Include="Search\UniversitySearch.cs" />
     <Compile Include="Search\VideoSearch.cs" />
     <Compile Include="UniqueKeyGenerator.cs" />
     <Compile Include="InfrastructureModule.cs" />
