--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -21,6 +21,7 @@
     "vue-adsense": "^1.0.1",
     "vuex": "^3.0.0",
     "vue-avatar-component": "^1.2.4",
+    "vue2-google-maps": "^0.8.4",
     "css-loader": "^0.28.7",
     "style-loader": "^0.18.2",
     "extract-text-webpack-plugin": "^3.0.0",
