--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -38,5 +38,7 @@
     "vue-star-rating": "^1.4.0",
     "vuetify-loader": "^0.1.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"  }
+    "stylus-loader": "^3.0.1",
+    "vue-intercom": "^1.0.6"
+  }
 }
