--- a/Cloudents.Web/appsettings.Development.json
+++ b/Cloudents.Web/appsettings.Development.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
+    //"DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=Zbox;Integrated Security=SSPI;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
+    "DefaultConnection": "Server=tcp:on0rodxe8f.database.windows.net;Database=ZBoxNew;User ID=ZBoxAdmin@on0rodxe8f;Password=Pa$$W0rd;Trusted_Connection=False;Encrypt=True;Asynchronous Processing=True;Connection Timeout=30;MultipleActiveResultSets=true;"
   }
 }
