--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -37,7 +37,6 @@
     "vue-star-rating": "^1.5.0",
     "vuetify-loader": "^0.1.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-flashcard": "^1.1.6"
+    "stylus-loader": "^3.0.1"
   }
 }
