--- a/Cloudents.Infrastructure/packages.config
+++ b/Cloudents.Infrastructure/packages.config
@@ -9,11 +9,15 @@
   <package id="CacheManager.SystemRuntimeCaching" version="1.1.1" targetFramework="net47" />
   <package id="Castle.Core" version="4.0.0" targetFramework="net47" />
   <package id="Dapper" version="1.50.2" targetFramework="net47" />
+  <package id="DocumentDB.Repository" version="1.2.0" targetFramework="net47" />
+  <package id="EnterpriseLibrary.TransientFaultHandling" version="6.0.1304.0" targetFramework="net47" />
   <package id="Google.Apis" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Auth" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Core" version="1.29.2" targetFramework="net47" />
   <package id="Google.Apis.Customsearch.v1" version="1.29.2.896" targetFramework="net47" />
   <package id="Google.Apis.YouTube.v3" version="1.29.2.991" targetFramework="net47" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.12.2" targetFramework="net47" />
+  <package id="Microsoft.Azure.DocumentDB.TransientFaultHandling" version="1.5.0" targetFramework="net47" />
   <package id="Microsoft.Azure.Search" version="4.0.1-preview" targetFramework="net47" />
   <package id="Microsoft.Cognitive.LUIS" version="2.0.2" targetFramework="net47" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.9" targetFramework="net47" />
