--- a/Cloudents.Web/package.json
+++ b/Cloudents.Web/package.json
@@ -36,6 +36,7 @@
     "vue-star-rating": "^1.5.0",
     "vuetify-loader": "^0.1.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "v-debounce": "^0.1.2"
   }
 }
